# ai_quant

./: ALPHA101_COMPLETE_REPORT.md  ALPHA101_GUIDE.md  API_DOCUMENTATION.md  BACKTEST_ENHANCEMENT_SUMMARY.md  CHANGELOG.md  DEPLOYMENT_GUIDE.md  FEAST_ALPHA101_SUMMARY.md  FEATURE_EXPORT_GUIDE.md  README.md  demo_backtest.py  demo_backtest_results.json  end_to_end_test.py  feast_serving_api.py  project_structure.md  pyproject.toml  test_backtest_simple.py  test_feast_basic.py  test_feast_serving.py  test_realtime_features.py
alpha101_features/: AAPL_alpha101.parquet  alpha101_complete.parquet
backtest/: README.md  backtest_engine.py  enhanced_backtest_engine.py  feast_offline_client.py  rulego_backtest_adapter.py  run_backtest.py
config/: backtest_config.yaml  database.yml  rulego.yml
dashboard/: dashboard_app.py  integrated_dashboard.py  requirements.txt  run_dashboard.sh
data/: feast_features.parquet  quant_features.duckdb  realtime_features.duckdb
data/arrow_cache/: ohlc_20250821_18.arrow
dbt_project/: .user.yml  dbt_project.yml  profiles.yml
dbt_project/macros/: setup_raw_data.sql
dbt_project/macros/alpha101/: alpha_factors.sql  alpha_factors.sql.bak  alpha_factors_21_50.sql.bak  alpha_factors_51_75.sql  (+2 more)
dbt_project/models/: schema.yml
dbt_project/seeds/: market_data.csv  raw_stock_prices.csv  schema.yml
decision_engine/: Dockerfile  feast_client.go  go.mod  go.sum  main.go  python_decision_engine.py
decision_engine/rules/: trading_rules.json
deploy/: Dockerfile.python  docker-compose.yml  requirements.txt  setup-linux-uv.sh  setup-linux.sh  setup-mac-uv.sh  setup-mac.sh
feast_alpha101/: README.md  showcase_features.py  test_feast.py
feast_alpha101/data/: GOOGL_alpha101.parquet  MSFT_alpha101.parquet  TSLA_alpha101.parquet
feast_alpha101/examples/: basic_usage.py  ml_example.py
feast_alpha101/feature_repo/: alpha101_features.py  entities.py  feature_definitions.py  feature_store.yaml
feast_config/: alpha101_config.json  alpha101_pusher.py  feature_store.yaml  features.py  push_features.py  simple_push_features.py
feast_config/feature_repo/: alpha101_complete_features.py  alpha101_features.py  data_sources.py  entities.py  feature_store.yaml  features.py  test_features.py
feast_features/: AAPL_features.parquet  GOOGL_features.parquet  MSFT_features.parquet  TSLA_features.parquet  all_features.parquet
performance_analysis/: performance_analyzer.py  rill_integration.py  rill_integration_simple.py  sample_performance_report.json
realtime_processing/: arrow_processor.py  feast_pusher.py  feature_calculator.py  main.py  miniqmt_connector.py
rill_project/: README.md  rill.yaml  start_rill.sh
rill_project/dashboards/: main_dashboard.yaml  trading_dashboard.yaml
rill_project/data/: daily_returns.csv  performance_metrics.csv  trades.csv
rill_project/models/: daily_returns.sql  performance_metrics.sql  trades_analysis.sql
scripts/: init_duckdb.py  quick_start.py  run_alpha101.py
tests/: test_enhanced_backtest.py
tests/integration/: test_alpha101_integration.py
tests/unit/: test_alpha101_factors.py  test_offline_features.py  test_offline_features_simple.py  test_realtime_features.py  test_strategy_decision.py
(+25 files in other folders)
