[project]
name = "quant-analysis-system"
version = "1.0.0"
description = "量化分析系统：DBT+DuckDB离线特征工程 + MiniQMT实时数据 + Feast特征存储 + RuleGo决策引擎"
authors = [
    {name = "Quant Analysis Team", email = "team@quantanalysis.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["quant", "trading", "feature-engineering", "feast", "dbt", "duckdb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    # 核心数据处理
    "pandas>=2.1.4",
    "numpy>=1.24.4",
    "pyarrow>=14.0.2",
    "duckdb>=0.9.2",
    
    # DBT相关
    "dbt-core>=1.7.4",
    "dbt-duckdb>=1.7.2",
    
    # 特征存储
    "feast>=0.34.0",
    "redis>=5.0.1",
    
    # 数据库和存储
    "sqlalchemy>=2.0.23",
    "pyyaml>=6.0.1",
    
    # Web框架和API
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
    
    # 可视化和看板
    "streamlit>=1.28.2",
    "plotly>=5.17.0",
    
    # 工具库
    "click>=8.1.7",
    "jinja2>=3.1.2",
    "psutil>=5.9.6",
    "schedule>=1.2.0",
    
    # 技术分析
    "talib-binary>=0.4.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
]

test = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
]

docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.8",
]

[project.urls]
Homepage = "https://github.com/your-org/quant-analysis-system"
Repository = "https://github.com/your-org/quant-analysis-system.git"
Documentation = "https://your-org.github.io/quant-analysis-system/"
"Bug Tracker" = "https://github.com/your-org/quant-analysis-system/issues"

[project.scripts]
quant-init = "scripts.init_duckdb:main"
quant-backtest = "backtest.backtest_engine:main"
quant-dashboard = "dashboard.integrated_dashboard:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts", "backtest", "dashboard", "performance_analysis", "realtime_processing", "feast_config"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]